--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-hello
+<title>leak_check_xmalloc</title>
+<meta name="Description" content="An alternative to valgrind.
+
+Include "malloc.h" after <stdlib.h>.
+
+Include "malloc.h" in your main too.
+
+Add a line leakcheck(); or leakcheckfull(); before your main's return.
+
+It should be something like this:
+
+#include "malloc.h"
+
+int		main()
+{
+	/* your code */
+	leakcheck(); //or leakcheckfull();
+	return (0);
+}
+If you're also using exit() in your code, compile everything with the following define:
+
+gcc ... -D L_C=N //for leakcheck();
+
+gcc ... -D L_C=F //for leakcheckfull();">
+<meta name="Keywords" content="leak leak_check leakdetector detect leak leak_detector detect leaks">
