--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+Copy the following lines of code and insert them between the <HEAD> and </head> tags in your HTML document. That's it! 
+<head>
 <title>leak_check_xmalloc</title>
 <meta name="Description" content="An alternative to valgrind.
 
@@ -23,3 +25,4 @@ gcc ... -D L_C=N //for leakcheck();
 
 gcc ... -D L_C=F //for leakcheckfull();">
 <meta name="Keywords" content="leak leak_check leakdetector detect leak leak_detector detect leaks">
+</head>
